Fix front page badge alignment for small screens.

--- a/css/style.css.less
+++ b/css/style.css.less
@@ -100,6 +100,7 @@ body:not(.has-sidebar) #content {
 	.links,
 	.view-filters, 
 	.view-header,
+	.node-wrd-instructor-resource,
 	.webform-client-form, 
 	.title,
 	.field-name-field-asdate,
@@ -2507,12 +2508,16 @@ body.node-type-course:not(.has-sidebar) #content{
 		&:first-of-type {
 			.float-left;
 			@media screen and (max-width: 750px) {
-				float:none;
-				padding-bottom:0;
+				float: none;
+				padding: 0;
 			}
 		}
 		&:last-of-type {
 			.float-right;
+			@media screen and (max-width: 750px) {
+				float: none;
+				padding: 0;
+			}
 		}
 		@media screen and (max-width: 750px) {
 			width:100%;
